# docker-coreos-autofs

./: CHANGELOG  COPYRIGHT  CREDITS  Dockerfile  INSTALL  Makefile  Makefile.conf.in  Makefile.rules  README  README.active-restart  README.amd-maps  README.ncpfs  README.replicated-server  README.v5.release  aclocal.m4  autofs.spec  configure  configure.in
daemon/: Makefile  automount.c  direct.c  flag.c  indirect.c  lookup.c  module.c  mount.c  spawn.c  state.c
include/: automount.h  base64.h  config.h.in  dclist.h  defaults.h  dev-ioctl-lib.h  list.h  log.h  lookup_ldap.h  macros.h  master.h  mounts.h  nsswitch.h  parse_amd.h  parse_subs.h  replicated.h  rpc_subs.h  state.h
include/linux/: auto_fs.h
lib/: Makefile  alarm.c  args.c  cache.c  cat_path.c  defaults.c  dev-ioctl-lib.c  log.c  macros.c  master.c  master_parse.y  master_tok.l  mounts.c  nss_parse.y  nss_tok.l  nsswitch.c  parse_subs.c  rpc_subs.c
man/: Makefile  auto.master.5.in  autofs.5  autofs.8.in  autofs.conf.5.in  autofs_ldap_auth.conf.5.in  automount.8
modules/: Makefile  amd_parse.y  amd_tok.l  base64.c  cyrus-sasl-extern.c  cyrus-sasl.c  dclist.c  lookup_dir.c  lookup_file.c  lookup_hesiod.c  lookup_hosts.c  lookup_ldap.c  lookup_multi.c  lookup_nisplus.c  lookup_program.c  lookup_sss.c  lookup_userhome.c  lookup_yp.c  mount_afs.c  mount_autofs.c  mount_bind.c  mount_changer.c  mount_ext2.c  mount_generic.c  mount_nfs.c  parse_amd.c  parse_hesiod.c  parse_sun.c  replicated.c
patches/: autofs4-2.6.18-v5-update-20090903.patch  autofs4-2.6.18-v5-update-20100114.patch  autofs4-2.6.19-v5-update-20090903.patch  autofs4-2.6.19-v5-update-20100114.patch  autofs4-2.6.20-v5-update-20090903.patch  autofs4-2.6.21-v5-update-20090903.patch  autofs4-2.6.22-v5-update-20090903.patch  autofs4-2.6.22.17-v5-update-20090903.patch  autofs4-2.6.23-v5-update-20090903.patch  autofs4-2.6.24-v5-update-20090903.patch  autofs4-2.6.24.4-v5-update-20090903.patch  autofs4-2.6.25-v5-update-20090903.patch  autofs4-2.6.26-v5-update-20090903.patch  autofs4-2.6.27-v5-update-20090903.patch  autofs4-2.6.29-v5-update-20090903.patch
redhat/: Makefile  autofs.conf.default.in  autofs.init.in
samples/: Makefile  auto.master  auto.net  autofs.conf.default.in  autofs.service.in  ldap-automount-auto.direct  ldap-automount-auto.indirect  ldap-automount-auto.master  ldap-automount-rfc2307-bis-auto.direct  ldap-automount-rfc2307-bis-auto.indirect  ldap-automount-rfc2307-bis-auto.master  ldap-automount-rfc2307-bis-old-style-auto.master  ldap-nis-auto.direct  ldap-nis-auto.indirect  ldap-nis-auto.master  rc.autofs.in
